--- a/client/home.html
+++ b/client/home.html
@@ -46,10 +46,10 @@
                 <td colspan="3"><input id="milliSeconds" type="number" placeholder="milliseconds" /></td>
             </tr>
             <tr>
-                <td colspan="3"><button id="resetButton">Reset</button></td>
+                <td colspan="3"><button id="resetButton" class="btn btn-warning">Reset</button></td>
             </tr>
             <tr>
-                <td colspan="3"><button id="submitButton">Submit</button></td>
+                <td colspan="3"><button id="submitButton" class="btn btn-primary">Submit</button></td>
             </tr>
         </table>
     </div>
