--- a/client/home.html
+++ b/client/home.html
@@ -4,7 +4,7 @@
 <body>
 
 <!-- add bootstrap for style-->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     
 <script type="text/javascript">
     //create global images varible to have access thouout the application
